2016-09-30 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/fiid/fiid.c: Put index into fiid_field_data so does
	not have to be calculated later.

	* libfreeipmi/fiid/fiid.c: Put start & end bytes into
	fiid_field_data so does not have to be calculated later.

2016-09-30 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/fiid/fiid.c (_fiid_template_check_valid_keys):
	Remove expensive check in production builds.  The fall out by not
	checking will be "key not found" errors on fiid_obj_get and
	similar.

	* libfreeipmi/fiid/fiid.c (fiid_obj_template_compare): Remove
	unnecessary call to _fiid_template_check_valid_flags.

2016-09-29 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/debug/ipmi-debug-lan.c (_ipmi_dump_lan_packet):
	Clear data on obj_session_hdr not obj_lan_msg_hdr.

	* ipmipower/ipmipower_powercmd.c (_recv_packet): Clear
	obj_lan_session_hdr_rs only if using authentication straight
	password key.

2016-09-29 Albert Chu <chu11@llnl.gov>

	* ipmipower/ipmipower_powercmd.c (_recv_packet),
	libfreeipmi/debug/ipmi-debug-rmcpplus.c (_dump_rmcpplus_session_trlr),
	libipmiconsole/ipmiconsole_processing.c (_receive_packet),
	libipmiconsole/ipmiconsole_packet.c (ipmiconsole_sol_packet_assemble),
	libipmiconsole/ipmiconsole_processing.c (_sol_bmc_to_remote_console_packet):
	Remove unnecessary fiid obj clear for security purposes.
	
2016-09-29 Albert Chu <chu11@llnl.gov>

	* bmc-info/bmc-info.c (display_system_info_common),
	bmc-device/bmc-device.c (set_system_info_common),
	ipmi-config/ipmi-config-category-pef-alert-string.c (alert_string_checkout),
	ipmi-dcmi/ipmi-dcmi.c (_sensor_info_output),
	ipmi-oem/ipmi-oem/ipmi-oem-dell.c (_get_dell_system_info_long_string), 
	ipmi-oem/ipmi-oem-thirdparty.c (ipmi_oem_thirdparty_get_system_info_block_pstring,
	ipmi_oem_thirdparty_get_account_status): Remove unnecessary fiid object
	clear which is also done in unassemble deep in API.

	* ipmi-oem/ipmi-oem-inventec.c (_ipmi_oem_inventec_read_eeprom_at24c256n,